Añadidos comentarios cool

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
   </head>
 
   <body>
+    <!--
+    -- ─── CABECERA ────────────────────────────────────────────────────
+    -->
     <header class="row d-flex flex-wrap justify-content-around py-3 mb-4 border-bottom w-100 p-3">
       <a href="index.html" class="d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none col-xl-6">
         <img src="static/img/logo.png" id="logo">
@@ -40,6 +43,11 @@
           <li class="nav-item"><a href="./3D-fractals.html"><button class="btn-change">Fractales 3D</button></a></li>    
       </ul>
     </header>
+    <!--
+    -- ─── CONTENIDO ───────────────────────────────────────────────────
+    -->    
+    
+    <!-- Opciones: Fractales 2D o 3D -->
     <main class="container-xl">
       <section class="row justify-content-around">
         <section class="col-lg-6">
@@ -70,6 +78,8 @@
         </a>
       </section>
       
+
+      <!-- Carrousel -->
       <section class="w-75 p-3 mx-auto">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
@@ -144,8 +154,9 @@
           </button>
         </div>
       </section>
-
-
+      <!--
+      -- ─── INTRODUCCION ────────────────────────────────────────────────
+      -->      
       <section class="container">
         <h2>¿Qué es un fractal?</h2>
         Hay distintas definiciones de fractal, basadas en el concepto de <b>autosimilaridad</b> y en el de <b>dimensión</b>. La dimensión es más compleja de entender, pero la autosimilaridad se puede entender con algunos ejemplos:
@@ -210,6 +221,9 @@
         </div>
       </section>
     </main>
+    <!--
+    -- ─── PIE DE PAGINA ───────────────────────────────────────────────
+    -->
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
       <div class="col-md-4 d-flex align-items-center">
         <a href="index.html" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
