--- a/3D-fractals.html
+++ b/3D-fractals.html
@@ -233,7 +233,8 @@
               </div>
             </div>
             <br>
-          <span id="contador-valor" class="fs-5 text"></span>
+          <span id="contador-valor" class="fs-5 text"></span><br>
+          <button class="btn-change" id="animaciones">Anima</button>
         </aside>
       </section>
 
