--- a/2D-fractals.html
+++ b/2D-fractals.html
@@ -159,7 +159,7 @@
                   </div>
                   <div class="container" id="deslizadorNSamples">
                       <div class="row align-items-center justify-content-between">
-                          <b class="col-6">Rayos por píxel:</b>
+                          <b class="col-6">Muestras por píxel:</b>
                           <input class="col-4" id="nSamples" type="range" min="1" max="4" step="1">
                           <div class="col-2" id="valorNSamples"></div>
                       </div>
